fixed mobile nav vertically alignment

--- a/assets/style.css
+++ b/assets/style.css
@@ -198,6 +198,16 @@ footer .social-icons {
         min-height: 60px;
     }
 
+    #nav-fluid .navbar {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+
+    #nav-fluid .navbar-brand {
+        margin-top: 5px;
+        margin-bottom: 5px;
+    }
+
     #booking-fluid {
         position: relative;
         top: 0px;
